New product tests and and store front

--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 $font-stack: Helvetica, sans-serif;
-$headliner-color: DeepPink;
+$headliner-color: #ff1493;
 $primary-color: #bebcc0;
 $secondary-color: #b8497f;
 $terciary-color: #4f4887;
